src/objects/acpl__AP_PeriodConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>acpl__gf_ap_bus_pl_guide_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guidelines Business Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_comm_plan_guide_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guidelines Commercial Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_edit_days_left_number__c</fullName>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_edit_prms_type_name__c</fullName>
        <label>Configuration type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Wave</fullName>
                    <label>Prioridad</label>
                </value>
                <value>
                    <fullName>Priority</fullName>
                    <isActive>false</isActive>
                    <label>Priority</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_genrl_lock_edit_ind_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unlock Account Plannings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_message_lock_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lock Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_message_unlock_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unlock Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_strat_anlys_guide_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guidelines Strategic Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_team_message_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Team Inclusion Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_update_event_type_name__c</fullName>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PF renewal date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Configuration</label>
    <listViews>
        <fullName>acpl__Account_Plan_Messages</fullName>
        <columns>NAME</columns>
        <columns>acpl__gf_ap_bus_pl_guide_desc__c</columns>
        <columns>acpl__gf_ap_comm_plan_guide_desc__c</columns>
        <columns>acpl__gf_ap_strat_anlys_guide_desc__c</columns>
        <columns>acpl__gf_ap_message_lock_desc__c</columns>
        <columns>acpl__gf_ap_message_unlock_desc__c</columns>
        <columns>acpl__gf_ap_team_message_desc__c</columns>
        <filterScope>Everything</filterScope>
        <label>Account Plan Messages</label>
    </listViews>
    <listViews>
        <fullName>acpl__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>